--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "firebase-notes",
+  "name": "keep-clone-with-auth",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@fortawesome/fontawesome-free-regular": "5.0.13",
-    "@fortawesome/fontawesome-free-solid": "5.0.13",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/react-fontawesome": "0.1.14",
     "firebase": "8.4.1",
-    "font-awesome": "4.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "4.2.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
